add api definition for user profile
